# audionotes

./: .env.example  .gitignore  Cargo.toml  Secrets.example.toml  flake.nix  shell.nix
migrations/: 20230813184726_create_tables.sql  20231202171024_create_failed_audio_transcriptions_table.sql
src/: api_error.rs  audio_storage.rs  claims.rs  main.rs  stt.rs  whisper.rs
src/database/: audios.rs  mod.rs  tags.rs  tokens.rs  users.rs
src/models/: mod.rs
src/routes/: audios.rs  mod.rs  users.rs
