[package]
name = "audionotes"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["headers"] }
shuttle-axum = "0.23.0"
shuttle-runtime = "0.23.0"
tokio = "1.28.2"
serde = { version = "1.0", features = ["derive"] }
shuttle-shared-db = { version = "0.23.0", features = ["postgres"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
anyhow = "1.0.72"
tracing = "0.1.37"
chrono = "0.4.26"
futures = "0.3.28"
tokio-util = { version = "0.7.8", features = ["io"] }
lettre = { version = "0.10", features = ["tokio1-native-tls"] }
shuttle-secrets = "0.23.0"
ring = "0.16.20"
data-encoding = "2.4.0"
argon2 = "0.5.1"
jsonwebtoken = "8.3.0"
headers = "0.3.8"
once_cell = "1.18.0"
