[package]
name = "audionotes"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["headers"] }
tokio = { version = "1.28.2", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
anyhow = "1.0.72"
tracing = "0.1.37"
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
tokio-util = { version = "0.7.8", features = ["io"] }
lettre = { version = "0.10", features = ["tokio1-native-tls"] }
ring = "0.16.20"
data-encoding = "2.4.0"
argon2 = "0.5.1"
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
zxcvbn = "2"
serde_json = "1.0.105"
tower-http = { version = "0.4.3", features = ["cors", "limit"] }
reqwest = { version = "0.11.20", features = ["json", "multipart", "stream"] }
tracing-subscriber = "0.3.18"
dotenvy = "0.15.7"
azure_core = "0.17.0"
azure_storage = "0.17.0"
azure_storage_blobs = "0.17.0"
tempfile = "3.8.1"
